api/simple-istio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-deployment
spec:
  selector:
    app: api
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  - name: https
    port: 443
    targetPort: 8080
    protocol: TCP
  type: LoadBalancer
